# gaelrag

./: .dockerignore  Dockerfile  LICENSE  README.md  Untitled.ipynb  docker-compose.yaml  main.py  pyproject.toml  start.sh
data/: create_index.ipynb  download_data.ipynb  download_data.py
data/.storage/: default__vector_store.json  docstore.json  index_store.json
exp/: create_index.ipynb  explore.ipynb  main.ipynb
src/: __init__.py  main.ipynb
src/config/: __init__.py  config.yaml  logging_config.ipynb
tests/: test_pdf_format.ipynb  test_pdf_format.py  test_query.ipynb  test_query.py
